// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses 
    totalling 
    $1,000.10
  </h1>
</div>
`;

exports[`should render one expense summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense 
    totalling 
    $2.35
  </h1>
</div>
`;
